搜索功能进一步细化：允许用户自己选择：关键词搜索、智能搜索；并且新增按照作品分类筛选，作品分类列表存入redis